Added the rest of armor effects, fixed a double click bug, removed debug messages
Not fully tested state